0.8.0 - currently working on
- [#4610] Fix: PHP/Apache crash/SIGSEV when running the unit tests on PHP 5.4
- [#4841] Cleanup: Drop the todo.txt file
- [#4830] Cleanup: Remove the closing PHP tags
- [#4789] Cleanup: Deprecate the static_info_tables extbase models and repositories
- [#4776] Cleanup: Replace "fixture" with "subject"
- [#4787] Cleanup: Drop the XCLASS footers
- [#4782] Feature: The MapperRegistry should accept extbase-style class names
- [#4781] Cleanup: Move the unit tests to Tests/Unit
- [#4741] Fix: Exception in deleteDummyFolderWithNonEmptyDummyFolderThrowsException
- [#4739] Fix: Test error in tx_oelib_DataMapperTest
- [#4740] Fix: Test error in tx_oelib_ModelTest
- [#4732] Fix: For 1:n relations, the second related model gets marked as deleted
- [#4686] Feature: Add FrontEndUser.setCompany (thanks to Tomas Norre Mikkelsen)
- [#4673] Fix: Re-add DataMapper::cacheModelByCombinedKeys
- [#4604] Feature: Add model caching by compound keys
- [#4626] Cleanup: Fix all instances of "Missing function doc comment"
- [#4647] Cleanup: Deprecate TemplateHelper::pi_getPidList
- [#4625] Cleanup: Fix all instances of "Underscores are not allowed in method names"
- [#4643] Cleanup: Make the Time class abstract
- [#4631] Cleanup: Drop useless class comments
- [#4630] Cleanup: Update the copyright to 2013
- [#4623] Cleanup: Fix all instances of "Missing @return tag in function comment"
- [#4600] Fix: Test failure tx_oelib_SalutationSwitcherTest
- [#4594] Fix: Google map coordinates are using a decimal comma if the PHP locale is not set correctly
- [#2671] Feature: Add model::isEmpty
- [#4591] Fix: Session::setInstance must be static
- [#3996] Fix: Two tests of the templatehelperchild testcase fail
- [#4501] Cleanup: Document the different return types of the mailer factory
- [#4502] Cleanup: Document the different return types of the header proxy factory
- [#4499] Cleanup: Document that LoginManager::LoginUser also may accept NULL