@@ -90,11 +90,9 @@ class tx_oelib_Mapper_FrontEndUser extends Tx_Oelib_DataMapper {
 		return $this->getListOfModels(
 			Tx_Oelib_Db::selectMultiple(
 				'*',
-				$this->tableName,
+				$this->getTableName(),
 				$this->getUniversalWhereClause() . ' AND ' .
-					'usergroup REGEXP \'(^|,)(' .
-					implode('|', t3lib_div::intExplode(',', $groupUids)) .
-					')($|,)\''
+					'usergroup REGEXP \'(^|,)(' . implode('|', t3lib_div::intExplode(',', $groupUids)) . ')($|,)\''
 			)
 		);
 	}
